# Atelier_CMAKE_Dan_JEONG

./: CMakeLists.txt  Test_Add.txt  message.txt
.github/workflows/: tests.yml
include/: calculator.h
src/: CMakeLists.txt  main.c
src/lib/: CMakeLists.txt  calculator.c
